updated style.css to add fixed header, floats and clears. Streamlined css to center store image, added hover effects to the album covers.

--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /*Body*/
 
 body {
+    width: 100%;
+    margin: auto;
     white-space: normal;
     background-color: #000;
     background-image: radial-gradient(rgba(0, 0, 0, .3), rgba(220, 53, 35, .25));
@@ -140,21 +142,20 @@ div.skeleton2 {
     height: 70px;
     z-index: 1;
 }
-img.shirt {
-    position: absolute;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    left: 300px;
-    width: 200px;
-    height: 200px;
-    top: -25px;
-    line-height: 200px;
-}
 
 /*DIVS*/
 
 div.header {
+    position: fixed;
+    background-color: #000;
+    width: 100%;
+    z-index: 1000000;
+    box-shadow: 0px 10px 20px 8px #000000;
+}
+div.main-content {
+    padding-top: 120px;
+}
+div.intro {
     padding-bottom: 15px;
     margin-bottom: 15px;
     text-align: center;
@@ -171,22 +172,6 @@ div.blackonwhite {
     margin-top: -50px;
     border-radius: 0px 0px 15px 15px;
 }
-div.merch {
-    background: rgba(0, 0, 0, .75);
-    border-radius: 15px 15px 15px 15px;
-    text-align: center;
-    width: 100%;
-    padding-bottom: 5px;
-}
-div.store {
-    background: rgba(0, 0, 0, .75);
-    border-radius: 15px 15px 0px 0px;
-    width: 800px;
-    height: 160px;
-    min-width: 80px;
-    position: relative;
-    margin: auto;
-}
 div.blackonwhite a {
     color: #000;
     text-decoration: none;
@@ -195,6 +180,40 @@ div.blackonwhite a:hover {
     color: #f04937;
     text-decoration: underline;
     font-style: italic;
+}
+div.merch {
+    background: rgba(0, 0, 0, .75);
+    border-radius: 15px 15px 15px 15px;
+    text-align: center;
+    width: 100%;
+    padding-bottom: 5px;
+}
+div.merch a:link {
+    color: #f04937;
+    text-decoration: none;
+}
+div.merch a:visited {
+    color: #f04937;
+    font-size: 22.5px;
+    text-decoration: none;
+}
+div.merch a:hover {
+    color: #f04937;
+    text-decoration: underline;
+    font-style: italic;
+}
+div.store {
+    background: rgba(0, 0, 0, .75);
+    text-align: center;
+    height: 160px;
+    width: 100%
+}
+div.store img {
+    top: -15px;
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    position: relative;
 }
 
 /*Lists*/
@@ -217,6 +236,9 @@ ul.songlist {
 
 /*Classes*/
 
+.album-art:hover {
+    box-shadow: 0px 0px 88px -10px #f04937;
+}
 .whiteonblack {
     background-color: rgba(0, 0, 0, .75);
     border-radius: 15px;
@@ -239,20 +261,6 @@ ul.songlist {
 .uppercase {
     text-transform: uppercase;
 }
-div.merch a:link {
-    color: #f04937;
-    text-decoration: none;
-}
-div.merch a:visited {
-    color: #f04937;
-    font-size: 22.5px;
-    text-decoration: none;
-}
-div.merch a:hover {
-    color: #f04937;
-    text-decoration: underline;
-    font-style: italic;
-}
 .contact a:link {
     color: #f04937;
     font-weight: bold;
@@ -274,6 +282,40 @@ div.merch a:hover {
     text-align: center;
     padding: 0.2em;
 }
+
+
+
+
+
+
+/*FLOATS AND CLEARS*/
+.float-left {
+    float: left;
+    margin: 10px;
+}
+.float-right {
+    float: right;
+    margin: 10px;
+}
+.clearfix:after {
+    content: ".";
+    display: block;
+    height: 0;
+    clear: both;
+    visibility: hidden;
+}
+.clearfix {
+    display: inline-block;
+}
+/* Hides from IE-mac \*/
+* html .clearfix {
+    height: 1%;
+}
+.clearfix {
+    display: block;
+}
+/* End hide from IE-mac */
+
 
 /*ID*/
 
